--- a/LuckySpin/Views/Spinner/Spin.cshtml
+++ b/LuckySpin/Views/Spinner/Spin.cshtml
@@ -1,5 +1,8 @@
 ﻿@model LuckySpin.Models.Spin
 @inject LuckySpin.Models.TextTransformService Transform
+@{
+    Layout = "_Layout";
+}
 
 <h1> Lucky Spin</h1>
 <button onclick='history.go(0)'>Spin</button>
